# hanjiru

./: CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  hanjiru.cabal  hanjiru.nix  hie.yaml  overlay.nix
examples/tomita-glr-example/: tomita-glr-example.cabal
examples/tomita-glr-example-token-impl/: tomita-glr-example-token-impl.cabal
examples/tomita-glr-example-token-impl/src/Example/: Token.hs
examples/tomita-glr-example/src/Example/: Actions.hs
hanjiru-glr/: hanjiru-glr.cabal
hanjiru-glr/src/Hanjiru/: Token.hsig  Tomita.hs
hanjiru-glr/src/Hanjiru/Tomita/: Parse.hs  Reduce.hs  Shift.hs  Stack.hs
hanjiru-lr-gen/: hanjiru-lr-gen.cabal
hanjiru-lr-gen/src/Hanjiru/: LR.hs  MakeParseTable.hs
src/Data/Hanjiru/: Fix.hs  GSS.hs  Graph.hs  List.hs  MapGraph.hs  Saturate.hs  Strategies.hs
src/Data/Hanjiru/Graph/: MapGraph.hs
src/Hanjiru/: Tables.hs  Tomita.hs
src/Hanjiru/MakeParser/: LR.hs  LR0.hs  Lookahead.hs  Rules.hs
src/Hanjiru/Tomita/: Parse.hs  Reduce.hs  Shift.hs  Stack.hs
