cabal-version:      3.4
name:               hanjiru-lr-gen
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             exclusive-and
maintainer:         exclusiveandgate@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010

    default-extensions:
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
    exposed-modules:
        Hanjiru.MakeParseTable
    other-modules:
        Data.Hanjiru.List
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        containers,
        transformers
