cabal-version:      3.4
name:               tomita-glr-example-token-impl
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             exclusive-and
maintainer:         exclusiveandgate@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        ImportQualifiedPost
        LambdaCase
    exposed-modules:  Example.Token
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
